--- a/module/Main/view/main/main/index.phtml
+++ b/module/Main/view/main/main/index.phtml
@@ -11,7 +11,7 @@ if (isset($_SERVER["HTTPS"]) && $_SERVER["HTTPS"] == "on") {
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Leilão</title>
+    <title>CONCESSÃO DE DIREITO REAL DE USO</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
@@ -39,7 +39,7 @@ if (isset($_SERVER["HTTPS"]) && $_SERVER["HTTPS"] == "on") {
 <!-- Navigation-->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container px-4 px-lg-5">
-        <a class="navbar-brand" href="/">HWeb3</a>
+        <a class="navbar-brand" href="/">CONCESSÃO DE DIREITO REAL DE USO</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
@@ -73,9 +73,6 @@ if (isset($_SERVER["HTTPS"]) && $_SERVER["HTTPS"] == "on") {
                 <div class="wallet__options mt-3">
 
                     <div class="d-grid gap-2 col-6 mx-auto">
-                        <button class="btn btn-success" onclick="loginTorus();" type="button">
-                            Redes Sociais <span><img src="<?=$https.$_SERVER['HTTP_HOST']?>/assets/img/torus.png" alt="" width="18"></span>
-                        </button>
                         <button class="btn btn-primary" onclick="onConnect();" type="button">
                             Metamask <span><img src="<?=$https.$_SERVER['HTTP_HOST']?>/assets/img/metamask-alternative.png" alt="" width="18"></span>
                         </button>
@@ -94,7 +91,7 @@ if (isset($_SERVER["HTTPS"]) && $_SERVER["HTTPS"] == "on") {
 </section>
 <!-- Footer-->
 <footer class="py-5 bg-dark">
-    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Mobiup 2022</p></div>
+    <div class="container"><p class="m-0 text-center text-white">Copyright &copy; 2022</p></div>
 </footer>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
