--- a/module/Main/view/main/main/ends.phtml
+++ b/module/Main/view/main/main/ends.phtml
@@ -97,7 +97,7 @@ if (isset($_SERVER["HTTPS"]) && $_SERVER["HTTPS"] == "on") {
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 <!-- Core theme JS-->
-<script src="<?=$https.$_SERVER['HTTP_HOST']?>/assets/js/scripts.js"></script>
+<script src="<?=$https.$_SERVER['HTTP_HOST']?>/assets/js/scripts.js?t=<?=time()?>"></script>
 <script>
     setTimeout(() => {
         dataInfoNftsEnds();
